3eme exo - Heritage

--- a/Exercices.ipynb
+++ b/Exercices.ipynb
@@ -132,6 +132,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercice 3 - L'héritage simple\n",
+    "Définir les classes suivantes:\n",
+    "\n",
+    "Une classe DateNaissance avec trois attributs, jour, mois, année et une méthode ToString qui convertit la date de naissance en chaine de caractères\n",
+    "Une classe Personne avec trois attributs, nom, prénom et date de naissance et une méthode polymorphe Afficher pour afficher les données de chaque personne.\n",
+    "Une classe Employé qui dérive de la classe Personne, avec en plus un attribut Salaire et la redéfinition de la méthode Afficher.\n",
+    "Une classe Chef qui dérive de la classe Employé, avec en plus un attribut Service et la redéfinition de la méthode Afficher.\n",
+    "Exemple d’exécution:\n",
+    "\n",
+    ">>>P=personne(“Ilyass”,”Math”,DateNaissance(1,7,1982))\n",
+    ">>>P.afficher()\n",
+    "Nom: Ilyass \n",
+    "Prénom: Math\n",
+    "Date de naissance: 01 / 07 / 1982\n",
+    "\n",
+    ">>>E=employe(“Ilyass”,”Math”,DateNaissance(1,7,1985),7865.548)\n",
+    ">>>E.afficher()\n",
+    "Nom: Ilyass \n",
+    "Prénom: Math\n",
+    "Date de naissance: 01 / 07 / 1985\n",
+    "Salaire: 7865.55\n",
+    "\n",
+    ">>>Ch=chef(“Ilyass”,”Math”,DateNaissance(1,7,1988),7865.548,”Ressource humaine”)\n",
+    ">>>Ch.afficher()\n",
+    "Nom: Ilyass \n",
+    "Prénom: Math\n",
+    "Date de naissance: 01 / 07 / 1988\n",
+    "Salaire: 7865.55\n",
+    "Service: Ressource humaine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/3/1995\n",
+      "Lastname: Nugget\n",
+      " Fristname: Dinosaure\n",
+      " Birthday: 3/3/1995\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Pratique\n",
+    "\n",
+    "class Date :\n",
+    "    def __init__(self, day, month, year):\n",
+    "        self.day = day\n",
+    "        self.month = month\n",
+    "        self.year = year\n",
+    "    def ToString(self):\n",
+    "            txt = \"{}/{}/{}\"\n",
+    "            print(txt.format(self.day, self.month, self.year))\n",
+    "            return txt.format(self.day, self.month, self.year)\n",
+    "    \n",
+    "class Personne :\n",
+    "    def __init__(self, lastname, firstname, birth):\n",
+    "        self.lastname = lastname\n",
+    "        self.firstname = firstname\n",
+    "        self.birth = birth\n",
+    "    def Affiche(self):\n",
+    "        txtPersonne = \"Lastname: {}\\n Fristname: {}\\n Birthday: {}\"\n",
+    "        print(txtPersonne.format(self.lastname, self.firstname, self.birth))\n",
+    "\n",
+    "birth = Date(3,3,1995)\n",
+    "\n",
+    "p = Personne(\"Nugget\", \"Dinosaure\", birth.ToString())\n",
+    "p.Affiche()        \n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
