héritage incomplet _ employe

--- a/Exercices.ipynb
+++ b/Exercices.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Description des exos du 27/04"
+    "### Exos du 27/04 - PYTHON "
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Exercice 1 - CompteBancaire \n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Exercice 2 - Surcharge\n",
@@ -203,6 +203,10 @@
     "    def Affiche(self):\n",
     "        txtPersonne = \"Lastname: {}\\n Fristname: {}\\n Birthday: {}\"\n",
     "        print(txtPersonne.format(self.lastname, self.firstname, self.birth))\n",
+    "\n",
+    "# Dérivé de la classe Personne        \n",
+    "class Employe(Personne) : \n",
+    "    def __init__(self, salaire)\n",
     "\n",
     "birth = Date(3,3,1995)\n",
     "\n",
