--- a/Exercices.ipynb
+++ b/Exercices.ipynb
@@ -207,6 +207,7 @@
     "# Dérivé de la classe Personne        \n",
     "class Employe(Personne) : \n",
     "    def __init__(self, salaire)\n",
+    "        self.salaire = salaire\n",
     "\n",
     "birth = Date(3,3,1995)\n",
     "\n",
