--- a/Partie DataViz - exercices/Exercice 4 - KPI.ipynb
+++ b/Partie DataViz - exercices/Exercice 4 - KPI.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,14 +568,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          item_price  item_price*quantity\n",
+      "quantity                                 \n",
+      "1               3.39                 3.39\n",
+      "1               3.39                 3.39\n",
+      "1               3.39                 3.39\n",
+      "1               3.39                 3.39\n",
+      "2               3.39                 3.39\n",
+      "...              ...                  ...\n",
+      "1               3.39                 3.39\n",
+      "1               3.39                 3.39\n",
+      "1               3.39                 3.39\n",
+      "1               3.39                 3.39\n",
+      "1               3.39                 3.39\n",
+      "\n",
+      "[4622 rows x 2 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15968.150000000001"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 8) chiffre d'affaire\n",
+    "df[\"item_price*quantity\"] = data['item_price'] * data['quantity']\n",
+    "print(df)\n",
+    "df[\"item_price*quantity\"].sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(data['item_price'], data['quantity'])\n",
-    "\n",
-    "df[\"item_price*quantity\"] = data[\"item_price\"] * data[\"quantity\"]\n",
-    "\n"
+    "data."
    ]
   },
   {
