Exercice 4 - KPI.ipynb

--- a/Partie DataViz - exercices/Exercice 4 - KPI.ipynb
+++ b/Partie DataViz - exercices/Exercice 4 - KPI.ipynb
@@ -612,11 +612,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    4622.000000\n",
+       "mean        7.464336\n",
+       "std         4.245557\n",
+       "min         1.090000\n",
+       "25%         3.390000\n",
+       "50%         8.750000\n",
+       "75%         9.250000\n",
+       "max        44.250000\n",
+       "Name: item_price, dtype: float64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data."
+    "##9) Revenu moyen = 7.47\n",
+    "data['item_price'].describe()"
    ]
   },
   {
